name: simpleEngineIO
version: 1.0.0
build-type: Simple
cabal-version: >=1.10

Data-Dir: ./
Data-files:
  index.html

Executable simpleEngineIO
  default-language: Haskell2010
  build-depends:
    base,
    engine-io,
    engine-io-snap,
    snap-core,
    snap-server,
    stm,
    transformers,
    text,
    directory
  main-is: Main.hs
  ghc-options: -Wall -O2 -threaded
